# Octave

./: .gitignore  Dockerfile  README.md  appinfo.json  index.html  package.sh
css/: styles.css
js/: api.js  app.js  native-audio-bridge.js  navigation.js  remote.js  security.js
native_engine/: CMakeLists.txt  main.cpp  services.json
